--- a/StableDiffusion_iOS/Base.lproj/Main.storyboard
+++ b/StableDiffusion_iOS/Base.lproj/Main.storyboard
@@ -1,24 +1,178 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rBw-ph-eCB">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Text to Image-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="Text2ImageViewController" customModule="StableDiffusion_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W7b-CG-n0r">
+                                <rect key="frame" x="8" y="103" width="377" height="221"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="221" id="UBr-c9-gvH"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="MwU-Wr-70m"/>
+                                </connections>
+                            </textView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="fUh-hA-7WI">
+                                <rect key="frame" x="8" y="345.66666666666674" width="377" height="402.33333333333326"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="W7b-CG-n0r" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-8" id="Zrs-z3-3tn"/>
+                            <constraint firstItem="fUh-hA-7WI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fXE-WX-otI"/>
+                            <constraint firstItem="fUh-hA-7WI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="gn3-SU-fFL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fUh-hA-7WI" secondAttribute="trailing" constant="8" id="meq-n8-6Ae"/>
+                            <constraint firstItem="W7b-CG-n0r" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="r9M-8E-VUZ"/>
+                            <constraint firstItem="W7b-CG-n0r" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="uaD-Dy-JGx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fUh-hA-7WI" secondAttribute="bottom" constant="20" id="vJS-OC-GBn"/>
+                            <constraint firstItem="fUh-hA-7WI" firstAttribute="top" secondItem="W7b-CG-n0r" secondAttribute="bottom" constant="20" id="y9l-4n-JQ3"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Text to Image" largeTitleDisplayMode="never" style="browser" id="cL6-o6-p8l">
+                        <barButtonItem key="leftBarButtonItem" image="info" catalog="system" style="plain" id="hAc-Yb-CUT"/>
+                        <barButtonItem key="rightBarButtonItem" title="Generate" style="plain" id="LAl-ff-Z63">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="egO-BG-DEX">
+                                <rect key="frame" x="282.66666666666669" y="5" width="94.333333333333314" height="34.333333333333336"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Generate"/>
+                                <connections>
+                                    <action selector="generateImageAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8eb-ay-qvz"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="outputImage" destination="fUh-hA-7WI" id="ghz-0G-vmz"/>
+                        <outlet property="textView" destination="W7b-CG-n0r" id="uIL-AU-ulN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="3770.2290076335876" y="-251.40845070422537"/>
+        </scene>
+        <!--Image to Image-->
+        <scene sceneID="KE3-RE-9Kr">
+            <objects>
+                <viewController id="UkT-5G-oxB" customClass="Image2ImageViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zpZ-Z5-d78">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ODy-mu-kt1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Image to Image" largeTitleDisplayMode="never" id="8Ys-df-HIN"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4fg-I2-lph" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3837.4045801526718" y="436.61971830985919"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="NxX-CJ-rxo">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rBw-ph-eCB" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ug3-9i-yq5">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="nuX-r6-mBF" kind="relationship" relationship="rootViewController" id="KHu-dG-qV3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tC4-YK-6Uw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="20.610687022900763" y="3.5211267605633805"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="kLh-bH-B6C">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="nuX-r6-mBF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="9DG-1G-acL"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SuP-rr-q3w">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="riG-uw-Uc8" kind="relationship" relationship="viewControllers" id="pHT-Xx-DFg"/>
+                        <segue destination="JvV-pw-RY1" kind="relationship" relationship="viewControllers" id="3xM-wo-Q37"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i8x-I9-bZc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="947.32824427480909" y="3.5211267605633805"/>
+        </scene>
+        <!--Text to Image-->
+        <scene sceneID="um2-pR-L9z">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="riG-uw-Uc8" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Text to Image" image="pencil.line" catalog="system" id="RJk-VN-FGz"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VdI-dy-3iu">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="FVM-8g-KiS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ypO-wY-Dcs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2910.6870229007632" y="-251.40845070422537"/>
+        </scene>
+        <!--Image to Image-->
+        <scene sceneID="Igq-gA-GDp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JvV-pw-RY1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Image to Image" image="doc.text.image" catalog="system" id="3Qy-GP-ovq"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fpj-uM-i1b">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UkT-5G-oxB" kind="relationship" relationship="rootViewController" id="I4y-xx-wwN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YIk-4T-kTb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2910.6870229007632" y="436.61971830985919"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="doc.text.image" catalog="system" width="115" height="128"/>
+        <image name="info" catalog="system" width="93" height="128"/>
+        <image name="pencil.line" catalog="system" width="128" height="98"/>
+        <image name="person" catalog="system" width="128" height="121"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
